--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -10,7 +10,11 @@
 
 <body onload="pageLoad()">
 <div id="content">
+    <input type="text" name= "username" placeholder="Username" required>
+    <input type="password" name= "password" placeholder="Password" required>
+    <input type="submit" value="Login">
     <div id="testDiv"></div>
+    <link rel="stylesheet" href="/client/css/styles.css">
 </div>
 </body>
 
