--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -10,9 +10,18 @@
 
 <body onload="pageLoad()">
 <div id="content">
-    <input type="text" name= "username" placeholder="Username" required>
-    <input type="password" name= "password" placeholder="Password" required>
-    <input type="submit" value="Login">
+    <div class="container">
+        <label for="uname"><b>Username</b></label>
+        <input type="text" placeholder="Enter Username" name="uname" required>
+
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+
+        <button type="loginButton">Login</button>
+        <label>
+            <input type="checkbox" checked="checked" name="remember"> Remember me
+        </label>
+    </div>
     <div id="testDiv"></div>
     <link rel="stylesheet" href="/client/css/styles.css">
 </div>
