--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Demo page</title>
+    <title>Login</title>
     <link rel="stylesheet" type="text/css" href="/client/css/styles.css">
+    <script src="/client/js/js.cookie.js"></script>
     <script src="/client/js/index.js"></script>
     <link rel="shortcut icon" href="/client/favicon.ico" type="image/x-icon">
 </head>
@@ -12,7 +12,9 @@
 <div id="content">
 
     <div id="testDiv"></div>
+    <div id="loggedInDetails"></div>
     <link rel="stylesheet" href="/client/css/styles.css">
+
 </div>
 </body>
 
