--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Login</title>
+    <title>Homepage</title>
     <link rel="stylesheet" type="text/css" href="/client/css/styles.css">
-    <script src="/client/js/js.cookie.js"></script>
-    <script src="/client/js/index.js"></script>
+
     <link rel="shortcut icon" href="/client/favicon.ico" type="image/x-icon">
 </head>
 
 <body onload="pageLoad()">
-<div id="content">
 
-    <div id="testDiv"></div>
-    <div id="loggedInDetails"></div>
-    <link rel="stylesheet" href="/client/css/styles.css">
-
+<p><a href="/client/login.html"/>Login</p>
+<div id ="content">
+    <input type="text" value="Search for a song"><br>
+    <input type="submit" value="Search">
 </div>
+<div id ="bottom"></div>
+<style>
+    #fixed {
+        position: fixed;
+        left: 0;
+        padding: 0;
+        bottom:0;
+    }
+</style>
+
+
+<div id="fixed" style="background-color: #777777; height: 60px; width: 1920px;">
+    <div>
+        <img src="/client/img/Play.png" width="50" height="50" />
+        <img src="/client/img/Rewind.png" width="50" height="50" />
+    </div>
+</div>
+
+<link rel="stylesheet" href="/client/css/styles.css">
+
 </body>
 
 </html>
